welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:13: error: not found: value c
	{ c==tab(i)
          ^Array1:18: error: not found: value c
		setCouleurBrosse(c)
                                 ^Array1:21: error: not found: value c
		setCouleurBrosse(c+1)
                                 ^