welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	var tab = new Array[Color] (getMondeHauteur())
	
	for (i <- 0 to getMondeHauteur()-1)
	{
		tab(i) == getCouleurSol()
		avance()

	}
	
			for (j<- 0 to getMondeLargeur()-1)
	{ c==tab(i)
		gauche()
		avance()
		droite()
		avance()
		setCouleurBrosse(c)
		baisseBrosse()
		leveBrosse()
		setCouleurBrosse(c+1)
	}
	
}
